# GTest_C_Example

./: CMakeLists.txt  LICENSE  README.md
include/: Person.h
source/: CMakeLists.txt  Person.c  main.c
test/: CMakeLists.txt  GtestExample_test.cpp
